ui/src/styles/darkmode.scss
$dark-background-color: #1c1c1c;
$background-color: #202020;
$light-background-color: #2f2f2f;
$lighter-background-color: #3e3e3e;
$placeholder-color: #696969;
$foreground-color: #c6c6c7;
$light-foreground-color: #d9d9d9;

// https://coolors.co/355070-6d597a-b56576-e56b6f-eaac8b
$red-color: #e56b6f;
$red-shadow-color: rgba(229, 107, 111, 0.5);
$blue-color: #355070;
$violet-color: #6d597a;
$dark-red-color: #b56576;
$yellow-color: #eaac8b;

body.dark {
  background-color: $background-color;
  color: $foreground-color;

  --balloon-color: #3e3e3e;
  --balloon-text-color: #c6c6c7;
  --balloon-border-radius: 6px;

  // Chrome calendar icon in date inputs
  ::-webkit-calendar-picker-indicator {
    filter: invert(1);
  }

  ::placeholder {
    color: $placeholder-color;
  }

  ::selection {
    color: $light-foreground-color;
    background: $red-color;
  }

  a,
  p,
  strong {
    color: $foreground-color;
  }

  .tabs {
    background-color: $light-background-color;
  }

  .tabs a {
    color: $light-foreground-color;
    border-bottom-color: $background-color;
  }

  .label {
    color: $foreground-color;
  }

  .title,
  .subtitle,
  .modal-card-title {
    color: $light-foreground-color;
  }

  .tabs li.is-active {
    a,
    i {
      border-bottom-color: $red-color;
      color: $red-color;
    }
  }

  code {
    background-color: $lighter-background-color;
    color: $red-color;
  }

  .tag.is-light {
    background-color: $lighter-background-color;
    color: $foreground-color;
  }

  .tag.is-warning {
    background-color: $yellow-color;
    color: $dark-background-color;
  }

  .tag.is-success {
    background-color: $blue-color;
    color: $light-foreground-color;
  }

  img {
    filter: brightness(0.9) contrast(1.1);
  }

  .modal-card-body,
  .table {
    background-color: $background-color;
    color: $foreground-color;
  }

  .box,
  .button,
  .modal-card-head,
  .modal-card-foot {
    background-color: $light-background-color;
    color: $foreground-color;
  }

  .button,
  .modal-card-foot,
  .modal-card-head {
    border: none;
  }

  .modal-card-foot {
    .button {
      background-color: $lighter-background-color;
      color: $foreground-color;
    }
  }

  .cover-box {
    &.is-focused {
      figure {
        box-shadow: 0 0 3px 3px $red-color;

        img {
          filter: brightness(1) contrast(1);
        }
      }
    }

    figure.is-placeholder {
      background-color: $light-background-color;
      border-radius: 3px;
    }
  }

  .placeholder-grid {
    .cover-box {
      figure {
        background-color: $light-background-color;
        animation-name: color;
        animation-duration: 750ms;
        animation-iteration-count: infinite;
      }

      @keyframes color {
        0% {
          background-color: #222;
        }
        50% {
          background-color: $light-background-color;
        }
        100% {
          background-color: #222;
        }
      }
    }

    .cover-box.i0 {
      figure {
        animation-delay: 0ms;
      }
    }

    .cover-box.i1 {
      figure {
        animation-delay: 10ms;
      }
    }

    .cover-box.i2 {
      figure {
        animation-delay: 20ms;
      }
    }

    .cover-box.i3 {
      figure {
        animation-delay: 30ms;
      }
    }

    .cover-box.i4 {
      figure {
        animation-delay: 40ms;
      }
    }

    .cover-box.i5 {
      figure {
        animation-delay: 50ms;
      }
    }

    .cover-box.i6 {
      figure {
        animation-delay: 60ms;
      }
    }

    .cover-box.i7 {
      figure {
        animation-delay: 70ms;
      }
    }

    .cover-box.i8 {
      figure {
        animation-delay: 80ms;
      }
    }
  }

  .item-actions,
  .external-item-links {
    a {
      color: $dark-red-color;
    }
  }

  input,
  input:hover,
  textarea,
  textarea:hover {
    background-color: $dark-background-color;
    border-color: $dark-background-color;
    color: $foreground-color;
  }

  i.fa {
    color: $foreground-color;
  }

  input:focus,
  textarea:focus,
  select:focus {
    outline: none;
    border: none;
    box-shadow: none;
  }

  .omni-bar {
    border: 1px solid $dark-background-color;
    box-shadow: none;

    input {
      border: none;
      border-radius: 0;
      -moz-appearance: none;
      -webkit-appearance: none;
      background-color: transparent;
    }

    .auto-suggestion-input {
      border: none;
      -moz-appearance: none;
      -webkit-appearance: none;
      opacity: 1;
      -webkit-text-fill-color: $placeholder-color;
      background-color: $dark-background-color;
      color: $placeholder-color;
    }
  }

  hr {
    background-color: $lighter-background-color;
  }

  .is-primary,
  .is-primary:hover,
  .is-success,
  .is-success:hover {
    background-color: $blue-color !important;
    color: $light-foreground-color !important;
  }

  .is-danger,
  .is-danger:hover {
    background-color: $dark-red-color !important;
    color: $light-foreground-color !important;
  }

  .is-info,
  .is-info:hover {
    background-color: $violet-color !important;
    color: $light-foreground-color !important;
  }
}

